# team_18

chiba/: README.md
kikuda/: .gitignore  README.md
kikuda/backend/: app.py
kikuda/frontend/: package-lock.json  package.json  webpack.config.js
kikuda/frontend/public/: index.html
kikuda/frontend/src/: App.css  App.js  index.js
mannen/: Dockerfile  README.md  pyproject.toml
mannen/dialect-sns/: main.py
mannen/dialect_sns/: app.py  config.py  routes.py
mannen/dialect_sns/backend/: Dockerfile  config.py  pyproject.toml  run.py
mannen/dialect_sns/backend/.devcontainer/: devcontainer.json
mannen/dialect_sns/backend/app/: db.py  models.py  routes.py
mannen/dialect_sns/backend/app/services/: dialect_service.py
mannen/dialect_sns/backend/app/templates/: index.html
mannen/dialect_sns/backend/db/: init.py  test.py
mannen/dialect_sns/db/: Dockerfile  init.sql
mannen/dialect_sns/frontend/: package.json  webpack.config.js
mannen/dialect_sns/frontend/src/: App.js  setupProxy.js
mannen/dialect_sns/services/: dialect_service.py
nomura/: README.md
tada/: README.md
